[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
crossterm = "0.28.1"
ewebsock = "0.7.0"
futures-util = "0.3.31"
openssl = "0.10.68"
ratatui = "0.29.0"
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tui-textarea = "0.7.0"
