[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
tokio = "1"
chrono = "0.4" # Used for setting DateTimes
serde = "1" # Used in the Map Data into Structs sectiondependencies]
futures = "0.3.31"
tokio-tungstenite = "0.24.0"
futures-util = "0.3.31"
dotenvy = "0.15.7"
